# claw-hive

./: .gitignore  LICENSE  README.md  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.yml  env.example
.github/workflows/: deploy.yml
claw-voice/: Dockerfile  package-lock.json  package.json  tsconfig.json
claw-voice/scripts/: install.sh
claw-voice/skill/: SKILL.md  tools.json
claw-voice/src/: config.ts  handler.ts  instructions.ts  server.ts  transcript.ts
claw-voice/static/: index.html
claw-voice/tests/: gemini-live.test.ts  openai-realtime.test.ts  tool-registry.test.ts  ws-iter.test.ts
claw-voice/widget/: build.ts  claw-voice.ts
cli/: hive-cli.js  package-lock.json  package.json  wrapper.sh
cli/lib/: lifecycle.js  poll-utils.js  poll-wait.js  resolve-waiting.js  stale-reaper.js  workspace.js
cli/test/: depth-guard.test.js  lifecycle.test.js  poll-deps.test.js  resolve-waiting.test.js  (+2 more)
dashboard/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  server.ts  tailwind.config.js  tsconfig.server.json
docs/: agent-protocol.md
poll-relay/: Dockerfile  crontab  hive-blocked-relay.sh  hive-poll.sh  hive-relay.sh
schema/: SCHEMA.md
scripts/: install.sh
skill/: SKILL.md
voice-bridge/: Dockerfile  claudia.py  config.py  main.py  pyproject.toml  tools.py
voice-bridge/providers/: base.py  gemini_live.py  openai_realtime.py
voice-bridge/static/: index.html
voice-bridge/tests/: conftest.py  test_config.py  test_gemini_live.py  test_openai_live.py  test_providers.py  test_tools.py
watchdog/: hive-watchdog.sh
(+74 files in other folders)
