[project]
name = "voice-bridge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
markers = ["integration: requires live API keys"]
asyncio_mode = "auto"
